峰華企業官網-新增scss

--- a/練習/切版/峰華企業官網/index.html
+++ b/練習/切版/峰華企業官網/index.html
@@ -40,33 +40,33 @@
             <div class="glide__slides">
 
                 <div class="glide__slide">
-                    <div class="slide_caption">
+                    <div class="slide-caption">
                         <h1>用創新點綴人生，讓科技融入理想。</h1>
                         <h3>科技創新大平台，智慧生活新引擎。依靠科技進步推進經濟跨越式發展。用創新點綴人生，讓科技融入理想。</h3>
+                        <button class="explore-btn">探索更多</button>
                     </div>
-                    <button class="explore-btn">探索更多</button>
                     <div class="backdrop"></div>
                     <img src="./images/MINARI - ♡ (78250935) .jpg" alt="">
                 </div>
 
                 <div class="glide__slide">
-                    <div class="slide_caption">
-                        <h1>用創新點綴人生，讓科技融入理想。</h1>
-                        <h3>科技創新大平台，智慧生活新引擎。依靠科技進步推進經濟跨越式發展。用創新點綴人生，讓科技融入理想。</h3>
+                    <div class="slide-caption left">
+                        <h1>初音</h1>
+                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, maxime?</h3>
+                        <button class="explore-btn">探索更多</button>
                     </div>
-                    <button class="explore-btn">探索更多</button>
                     <div class="backdrop"></div>
                     <img src="./images/はなこ - 39 (71915593) .png" alt="">
                 </div>
 
                 <div class="glide__slide">
-                    <div class="slide_caption">
+                    <div class="slide-caption">
                         <h1>科技改變世界</h1>
                         <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita dolore voluptate
                             accusantium nobis dicta quae doloremque doloribus at! Quaerat soluta placeat fugit
                             exercitationem quas omnis error voluptates, qui necessitatibus vero.</h3>
+                        <button class="explore-btn">探索更多</button>
                     </div>
-                    <button class="explore-btn">探索更多</button>
                     <div class="backdrop"></div>
                     <img src="./images/はなこ - この声が聞こえてるかな (73785451) .png" alt="">
                 </div>
