峰華企業官網-圖片輪播圖完成

--- a/練習/切版/峰華企業官網/index.html
+++ b/練習/切版/峰華企業官網/index.html
@@ -76,19 +76,73 @@
 
         <!-- 輪播切換按鈕 -->
         <div class="glide__arrows" data-glide-el="controls">
-            <button class="glide__arrow glide__arrow--left" data-glide-el="<">
-                &lt;
-            </button>
-            <button class="glide__arrow glide__arrow--right" data-glide-el=">">
-                &gt;
-            </button>
+            <button class="glide__arrow glide__arrow--left" data-glide-dir="<">&lt;</button>
+            <button class="glide__arrow glide__arrow--right" data-glide-dir=">">&gt;</button>
         </div>
 
         <div class="glide__bullets" data-glide-el="controls[nav]">
-            <button class="glide_bullet" data-glide-el="=0"></button>
-            <button class="glide_bullet" data-glide-el="=1"></button>
+            <button class="glide__bullet" data-glide-dir="=0"></button>
+            <button class="glide__bullet" data-glide-dir="=1"></button>
+            <button class="glide__bullet" data-glide-dir="=2"></button>
         </div>
     </div>
+
+    <!-- 關於我們 -->
+    <div class="content-wrapper">
+        <section class="about-us">
+            <h2 class="title-about">關於我們</h2>
+            <p class="intro">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi quo dolorem iure blanditiis iste quas
+                harum nihil beatae repudiandae, expedita sit repellat magni, voluptas maiores rem quod laborum omnis
+                reprehenderit!
+            </p>
+            <div class="features">
+                <div class="feature">
+                    <i class="fa fa-lightbulb"></i>
+                    <h4 class="feature-title">品牌創意</h4>
+                    <p class="feature-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, corporis
+                        natus? Distinctio ab, incidunt deserunt cupiditate mollitia quaerat architecto est!</p>
+                </div>
+
+                <div class="feature">
+                    <i class="fa fa-lightbulb"></i>
+                    <h4 class="feature-title">品牌創意</h4>
+                    <p class="feature-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, corporis
+                        natus? Distinctio ab, incidunt deserunt cupiditate mollitia quaerat architecto est!</p>
+                </div>
+
+                <div class="feature">
+                    <i class="fa fa-lightbulb"></i>
+                    <h4 class="feature-title">品牌創意</h4>
+                    <p class="feature-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, corporis
+                        natus? Distinctio ab, incidunt deserunt cupiditate mollitia quaerat architecto est!</p>
+                </div>
+
+                <div class="feature">
+                    <i class="fa fa-lightbulb"></i>
+                    <h4 class="feature-title">品牌創意</h4>
+                    <p class="feature-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, corporis
+                        natus? Distinctio ab, incidunt deserunt cupiditate mollitia quaerat architecto est!</p>
+                </div>
+
+                <div class="feature">
+                    <i class="fa fa-lightbulb"></i>
+                    <h4 class="feature-title">品牌創意</h4>
+                    <p class="feature-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, corporis
+                        natus? Distinctio ab, incidunt deserunt cupiditate mollitia quaerat architecto est!</p>
+                </div>
+
+                <div class="feature">
+                    <i class="fa fa-lightbulb"></i>
+                    <h4 class="feature-title">品牌創意</h4>
+                    <p class="feature-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, corporis
+                        natus? Distinctio ab, incidunt deserunt cupiditate mollitia quaerat architecto est!</p>
+                </div>
+            </div>
+        </section>
+    </div>
+
+    <script src="libs/anime/anime.min.js"></script>
     <script src="libs/glide/glide.min.js"></script>
     <script src="index.js"></script>
 </body>
