成功案例完成

--- a/練習/切版/峰華企業官網/index.html
+++ b/練習/切版/峰華企業官網/index.html
@@ -87,10 +87,10 @@
         </div>
     </div>
 
-    <!-- 關於我們 -->
     <div class="content-wrapper">
+        <!-- 關於我們 -->
         <section class="about-us">
-            <h2 class="title-about">關於我們</h2>
+            <h2 class="title">關於我們</h2>
             <p class="intro">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi quo dolorem iure blanditiis iste quas
                 harum nihil beatae repudiandae, expedita sit repellat magni, voluptas maiores rem quod laborum omnis
@@ -98,45 +98,82 @@
             </p>
             <div class="features">
                 <div class="feature">
-                    <i class="fa fa-lightbulb"></i>
+                    <img src="/images/logo.svg" alt="" class="logo">
                     <h4 class="feature-title">品牌創意</h4>
                     <p class="feature-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, corporis
                         natus? Distinctio ab, incidunt deserunt cupiditate mollitia quaerat architecto est!</p>
                 </div>
 
                 <div class="feature">
-                    <i class="fa fa-lightbulb"></i>
+                    <img src="/images/logo.svg" alt="" class="logo">
                     <h4 class="feature-title">品牌創意</h4>
                     <p class="feature-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, corporis
                         natus? Distinctio ab, incidunt deserunt cupiditate mollitia quaerat architecto est!</p>
                 </div>
 
                 <div class="feature">
-                    <i class="fa fa-lightbulb"></i>
+                    <img src="/images/logo.svg" alt="" class="logo">
                     <h4 class="feature-title">品牌創意</h4>
                     <p class="feature-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, corporis
                         natus? Distinctio ab, incidunt deserunt cupiditate mollitia quaerat architecto est!</p>
                 </div>
 
                 <div class="feature">
-                    <i class="fa fa-lightbulb"></i>
+                    <img src="/images/logo.svg" alt="" class="logo">
                     <h4 class="feature-title">品牌創意</h4>
                     <p class="feature-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, corporis
                         natus? Distinctio ab, incidunt deserunt cupiditate mollitia quaerat architecto est!</p>
                 </div>
 
                 <div class="feature">
-                    <i class="fa fa-lightbulb"></i>
+                    <img src="/images/logo.svg" alt="" class="logo">
                     <h4 class="feature-title">品牌創意</h4>
                     <p class="feature-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, corporis
                         natus? Distinctio ab, incidunt deserunt cupiditate mollitia quaerat architecto est!</p>
                 </div>
 
                 <div class="feature">
-                    <i class="fa fa-lightbulb"></i>
+                    <img src="/images/logo.svg" alt="" class="logo">
                     <h4 class="feature-title">品牌創意</h4>
                     <p class="feature-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, corporis
                         natus? Distinctio ab, incidunt deserunt cupiditate mollitia quaerat architecto est!</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- 成功案例 -->
+        <section class="showcases section-bg">
+            <h2 class="title">成功案例</h2>
+            <div class="filter-btns">
+                <button class="filter-btn active" data-filter="*">全部</button>
+                <button class="filter-btn" data-filter=".web">Web</button>
+                <button class="filter-btn" data-filter=".mobile">手機</button>
+                <button class="filter-btn" data-filter=".r-18">R-18</button>
+            </div>
+            <div class="cases">
+                <div class="case-item web r-18">
+                    <img src="/images/71761692_0.png" alt="" srcset="">
+                </div>
+                <div class="case-item web r-18">
+                    <img src="/images/71761692_1.png" alt="" srcset="">
+                </div>
+                <div class="case-item web">
+                    <img src="/images/71761692_2.png" alt="" srcset="">
+                </div>
+                <div class="case-item mobile">
+                    <img src="/images/71761692_3.png" alt="" srcset="">
+                </div>
+                <div class="case-item mobile">
+                    <img src="/images/71761692_4.png" alt="" srcset="">
+                </div>
+                <div class="case-item r-18">
+                    <img src="/images/71761692_5.png" alt="" srcset="">
+                </div>
+                <div class="case-item r-18">
+                    <img src="/images/71761692_6.png" alt="" srcset="">
+                </div>
+                <div class="case-item mobile">
+                    <img src="/images/はなこ - 39 (71915593) .png" alt="" srcset="">
                 </div>
             </div>
         </section>
@@ -144,6 +181,7 @@
 
     <script src="libs/anime/anime.min.js"></script>
     <script src="libs/glide/glide.min.js"></script>
+    <script src="libs/isotope/isotope.pkgd.min.js"></script>
     <script src="index.js"></script>
 </body>
 
