服務流程，團隊介紹，公司動態 完成

--- a/練習/切版/峰華企業官網/index.html
+++ b/練習/切版/峰華企業官網/index.html
@@ -177,6 +177,218 @@
                 </div>
             </div>
         </section>
+
+        <!-- 服務流程 -->
+        <section class="service">
+            <h2 class="title">服務流程</h2>
+            <p class="intro">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, quam.
+            </p>
+            <div class="services">
+                <div class="service-item">
+                    <img src="images/logo.svg" alt="" srcset="">
+                    <h2 class="service-title">需求溝通</h2>
+                    <p class="service-content">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </p>
+                </div>
+                <div class="service-item">
+                    <img src="images/logo.svg" alt="" srcset="">
+                    <h2 class="service-title">需求溝通</h2>
+                    <p class="service-content">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </p>
+                </div>
+                <div class="service-item">
+                    <img src="images/logo.svg" alt="" srcset="">
+                    <h2 class="service-title">需求溝通</h2>
+                    <p class="service-content">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </p>
+                </div>
+                <div class="service-item">
+                    <img src="images/logo.svg" alt="" srcset="">
+                    <h2 class="service-title">需求溝通</h2>
+                    <p class="service-content">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </p>
+                </div>
+                <div class="service-item">
+                    <img src="images/logo.svg" alt="" srcset="">
+                    <h2 class="service-title">需求溝通</h2>
+                    <p class="service-content">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </p>
+                </div>
+                <div class="service-item">
+                    <img src="images/logo.svg" alt="" srcset="">
+                    <h2 class="service-title">需求溝通</h2>
+                    <p class="service-content">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <!-- 團隊介紹 -->
+        <section class="team-intro section-bg">
+            <h2 class="title">團隊介紹</h2>
+            <div class="team-members">
+
+                <div class="team-member">
+                    <div class="profile-img">
+                        <img src="images/81721226_0.png" alt="" srcset="">
+                    </div>
+                    <h4 class="name">Pixiv賽高</h4>
+                    <p class="job">P網畫家</p>
+                    <ul class="social-links">
+                        <li><i class="fa fa-save"></i></li>
+                        <li><i class="fa fa-amazon"></i></li>
+                        <li><i class="fa fa-github"></i></li>
+                        <li><i class="fa fa-facebook"></i></li>
+                    </ul>
+                </div>
+                <div class="team-member">
+                    <div class="profile-img">
+                        <img src="images/81721226_1.png" alt="" srcset="">
+                    </div>
+                    <h4 class="name">Pixiv賽高</h4>
+                    <p class="job">P網畫家</p>
+                    <ul class="social-links">
+                        <li><i class="fa fa-save"></i></li>
+                        <li><i class="fa fa-amazon"></i></li>
+                        <li><i class="fa fa-github"></i></li>
+                        <li><i class="fa fa-facebook"></i></li>
+                    </ul>
+                </div>
+                <div class="team-member">
+                    <div class="profile-img">
+                        <img src="images/81721226_2.png" alt="" srcset="">
+                    </div>
+                    <h4 class="name">Pixiv賽高</h4>
+                    <p class="job">P網畫家</p>
+                    <ul class="social-links">
+                        <li><i class="fa fa-save"></i></li>
+                        <li><i class="fa fa-amazon"></i></li>
+                        <li><i class="fa fa-github"></i></li>
+                        <li><i class="fa fa-facebook"></i></li>
+                    </ul>
+                </div>
+                <div class="team-member">
+                    <div class="profile-img">
+                        <img src="images/らむち@イラスト本⑥配信中 - ひめちゃん (81078585) .png" alt="" srcset="">
+                    </div>
+                    <h4 class="name">Pixiv賽高</h4>
+                    <p class="job">P網畫家</p>
+                    <ul class="social-links">
+                        <li><i class="fa fa-save"></i></li>
+                        <li><i class="fa fa-amazon"></i></li>
+                        <li><i class="fa fa-github"></i></li>
+                        <li><i class="fa fa-facebook"></i></li>
+                    </ul>
+                </div>
+
+            </div>
+        </section>
+
+        <!-- 數據部分 -->
+        <section class="data-section">
+            <div class="data-piece">
+                <i class="fa fa-code"></i>
+                <div class="num">156</div>
+                <div class="data-desc">行代碼</div>
+            </div>
+            <div class="data-piece">
+                <i class="fa fa-code"></i>
+                <div class="num">256</div>
+                <div class="data-desc">行代碼</div>
+            </div>
+            <div class="data-piece">
+                <i class="fa fa-code"></i>
+                <div class="num">999</div>
+                <div class="data-desc">行代碼</div>
+            </div>
+            <div class="data-piece">
+                <i class="fa fa-code"></i>
+                <div class="num">1536</div>
+                <div class="data-desc">行代碼</div>
+            </div>
+        </section>
+
+        <section class="company-activities">
+            <h2 class="title">公司動態</h2>
+            <p class="intro">Lorem, ipsum dolor.</p>
+            <div class="activities">
+
+                <div class="activity">
+                    <div class="act-img-wrapper">
+                        <img src="images/らむち@イラスト本⑥配信中 - 後ろを歩くひめちゃん (81133526) .png" alt="" srcset="">
+                    </div>
+                    <div class="meta">
+                        <p class="data-published">
+                            <i class="fa fa-calendar"></i> 2020年5月23日
+                        </p>
+                        <p class="comments">
+                            <i class="fa fa-comments"></i> 33條評論
+                        </p>
+                    </div>
+                    <h2 class="act-title">
+                        Lorem, ipsum dolor.
+                    </h2>
+                    <article>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, iste.
+                    </article>
+                    <button class="read-more-btn">
+                        閱讀更多
+                    </button>
+                </div>
+                <div class="activity">
+                    <div class="act-img-wrapper">
+                        <img src="images/らむち@イラスト本⑥配信中 - 音狐ちゃん (81137445) .png" alt="" srcset="">
+                    </div>
+                    <div class="meta">
+                        <p class="data-published">
+                            <i class="fa fa-calendar"></i> 2020年5月23日
+                        </p>
+                        <p class="comments">
+                            <i class="fa fa-comments"></i> 33條評論
+                        </p>
+                    </div>
+                    <h2 class="act-title">
+                        Lorem, ipsum dolor.
+                    </h2>
+                    <article>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, iste.
+                    </article>
+                    <button class="read-more-btn">
+                        閱讀更多
+                    </button>
+                </div>
+                <div class="activity">
+                    <div class="act-img-wrapper">
+                        <img src="images/WsMan - 0225 (79716740) .png" alt="" srcset="">
+                    </div>
+                    <div class="meta">
+                        <p class="data-published">
+                            <i class="fa fa-calendar"></i> 2020年5月23日
+                        </p>
+                        <p class="comments">
+                            <i class="fa fa-comments"></i> 33條評論
+                        </p>
+                    </div>
+                    <h2 class="act-title">
+                        Lorem, ipsum dolor.
+                    </h2>
+                    <article>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, iste.
+                    </article>
+                    <button class="read-more-btn">
+                        閱讀更多
+                    </button>
+                </div>
+
+            </div>
+        </section>
     </div>
 
     <script src="libs/anime/anime.min.js"></script>
