大致完成，剩餘RWD

--- a/練習/切版/峰華企業官網/index.html
+++ b/練習/切版/峰華企業官網/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="libs/scrollReveal/scrollreveal.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="libs/glide/glide.core.min.css">
     <link rel="stylesheet" href="libs/glide/glide.theme.min.css">
@@ -14,15 +15,15 @@
 <body>
 
     <!-- 頂部 -->
-    <header>
+    <header >
         <div class="logo">峰華科技</div>
         <nav>
-            <a href="#">首頁</a>
-            <a href="#">關於我們</a>
-            <a href="#">成功案例</a>
-            <a href="#">服務流程</a>
-            <a href="#">團隊介紹</a>
-            <a href="#">公司動態</a>
+            <a href="#home">首頁</a>
+            <a href="#about-us">關於我們</a>
+            <a href="#showcases">成功案例</a>
+            <a href="#service">服務流程</a>
+            <a href="#team-intro">團隊介紹</a>
+            <a href="#company-activities">公司動態</a>
             <i class="fa fa-search"></i>
         </nav>
 
@@ -34,7 +35,7 @@
     </header>
 
     <!-- 輪播圖 -->
-    <div class="glide">
+    <div id="home" class="glide">
 
         <div class="glide__track" data-glide-el="track">
             <div class="glide__slides">
@@ -89,7 +90,7 @@
 
     <div class="content-wrapper">
         <!-- 關於我們 -->
-        <section class="about-us">
+        <section id="about-us" class="about-us">
             <h2 class="title">關於我們</h2>
             <p class="intro">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi quo dolorem iure blanditiis iste quas
@@ -142,7 +143,7 @@
         </section>
 
         <!-- 成功案例 -->
-        <section class="showcases section-bg">
+        <section id="showcases" class="showcases section-bg">
             <h2 class="title">成功案例</h2>
             <div class="filter-btns">
                 <button class="filter-btn active" data-filter="*">全部</button>
@@ -179,7 +180,7 @@
         </section>
 
         <!-- 服務流程 -->
-        <section class="service">
+        <section id="service" class="service">
             <h2 class="title">服務流程</h2>
             <p class="intro">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, quam.
@@ -231,7 +232,7 @@
         </section>
 
         <!-- 團隊介紹 -->
-        <section class="team-intro section-bg">
+        <section id="team-intro" class="team-intro section-bg">
             <h2 class="title">團隊介紹</h2>
             <div class="team-members">
 
@@ -315,7 +316,8 @@
             </div>
         </section>
 
-        <section class="company-activities">
+        <!-- 公司動態 -->
+        <section id="company-activities" class="company-activities">
             <h2 class="title">公司動態</h2>
             <p class="intro">Lorem, ipsum dolor.</p>
             <div class="activities">
@@ -389,11 +391,76 @@
 
             </div>
         </section>
+
+        
     </div>
+
+    <!-- 底部 -->
+    <footer>
+        <div class="footer-menus">
+            <div class="contact-us">
+                <p class="menu-title">聯繫我們</p>
+                <p>地址：Lorem, ipsum.</p>
+                <p>電話：Lorem, ipsum dolor.</p>
+                <p>傳真：Lorem, ipsum dolor.</p>
+                <p>電子郵件：Lorem, ipsum dolor.</p>
+            </div>
+            <div class="service-menu footer-menu">
+
+                <p class="menu-title">服務概覽</p>
+                <ul class="menu-items">
+                    <li><a href="#">網站建設</a></li>
+                    <li><a href="#">域名購買</a></li>
+                    <li><a href="#">網頁設計</a></li>
+                    <li><a href="#">移動應用</a></li>
+                </ul>
+
+            </div>
+            <div class="service-menu footer-menu">
+
+                <p class="menu-title">服務概覽</p>
+                <ul class="menu-items">
+                    <li><a href="#">網站建設</a></li>
+                    <li><a href="#">域名購買</a></li>
+                    <li><a href="#">網頁設計</a></li>
+                    <li><a href="#">移動應用</a></li>
+                </ul>
+
+            </div>
+            <div class="service-menu footer-menu">
+
+                <p class="menu-title">服務概覽</p>
+                <ul class="menu-items">
+                    <li><a href="#">網站建設</a></li>
+                    <li><a href="#">域名購買</a></li>
+                    <li><a href="#">網頁設計</a></li>
+                    <li><a href="#">移動應用</a></li>
+                </ul>
+
+            </div>
+            <div class="service-menu footer-menu">
+
+                <p class="menu-title">服務概覽</p>
+                <ul class="menu-items">
+                    <li><a href="#">網站建設</a></li>
+                    <li><a href="#">域名購買</a></li>
+                    <li><a href="#">網頁設計</a></li>
+                    <li><a href="#">移動應用</a></li>
+                </ul>
+
+            </div>
+            <p class="icp-info">Lorem ipsum dolor sit.</p>
+            <p class="rights">Lorem ipsum dolor sit amet.</p>
+            <div class="scrollTop">
+                <a href="#home"><i class="fa fa-chevron-up"></i></a>
+            </div>
+        </div>
+    </footer>
 
     <script src="libs/anime/anime.min.js"></script>
     <script src="libs/glide/glide.min.js"></script>
     <script src="libs/isotope/isotope.pkgd.min.js"></script>
+    <script src="libs/smooth-scroll/smooth-scroll.polyfills.min.js"></script>
     <script src="index.js"></script>
 </body>
 
