峰華網站完成

--- a/練習/切版/峰華企業官網/index.html
+++ b/練習/切版/峰華企業官網/index.html
@@ -458,7 +458,7 @@
     </footer>
 
     <script src="libs/anime/anime.min.js"></script>
-    <script src="libs/glide/glide.min.js"></script>
+    <script src="libs/glide/glide.js"></script>
     <script src="libs/isotope/isotope.pkgd.min.js"></script>
     <script src="libs/smooth-scroll/smooth-scroll.polyfills.min.js"></script>
     <script src="index.js"></script>
